# openvino_v5

./: CMakeLists.txt  README.md  main.cpp  test_yolov5.cpp
include/: config.h  yolo.h
src/: config.cpp  yolo.cpp
testDll/: CMakeLists.txt  testDll.cpp
